--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,6 @@ jobs:
           push: true
           tags:
             micheljoaquim/kube-news:latest
-            micheljoaquim/kube-news:${{github.run_number}}
+            micheljoaquim/kube-news:v${{github.run_number}}
             
   
