--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
           context: ./src
           push: true
           tags:
-            micheljoaquim/kube-news/:latest
-            micheljoaquim/kube-news/:v${{github.run_number}}
+            micheljoaquim/kube-news:latest
+            micheljoaquim/kube-news:v${{github.run_number}}
             
   
