--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,5 +37,6 @@ jobs:
           push: true
           tags:
             micheljoaquim/kube-news:latest
+            micheljoaquim/kube-news:${{github.run_number}}
             
   
