--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,4 +39,21 @@ jobs:
             micheljoaquim/kube-news:latest
             micheljoaquim/kube-news:${{github.run_number}}
             
-  
+  CD:
+    runs-on: ubuntu-latest
+    needs: [CI]
+    steps: 
+      - uses: actions/checkout@v3
+      - name: Kubernetes
+        uses: Azure:k8s-set-context@v2
+        with:
+          method: kubeconfig
+          kubeconfig: ${{secrets.K8S_CONFIG}}
+      
+      - name: Deploy on kubernetes
+        uses: Azure/k8s-deploy-@v3.1
+        with: 
+          images: micheljoaquim/kube-news:${{github.run_number}}
+          manifest: 
+            k8s/deployment.yaml
+    
