--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,6 @@ jobs:
         uses: Azure/k8s-deploy-@v3.1
         with: 
           images: micheljoaquim/kube-news:${{github.run_number}}
-          manifest: 
+          manifests: 
             k8s/deployment.yaml
     
