--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   CI:
+  
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -38,5 +39,17 @@ jobs:
           tags:
             micheljoaquim/kube-news:latest
             micheljoaquim/kube-news:${{github.run_number}}
-            
+  CD:
+    runs-on: ubuntu-latest
+    needs: [CI]
+    steps: 
+      - uses: actions/checkout@v3
+      
+      - name: Kubernetes
+        uses: Azure:k8s-set-context@v2
+        with:
+          method: kubeconfig
+          kubeconfig: ${{secrets.K8S_CONFIG}}
+
+
   
