--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,4 +50,10 @@ jobs:
         with:
           method: kubeconfig
           kubeconfig: ${{secrets.K8S_kubeconfig}}
-
+      
+      - name: Deploy to Kubernetes cluster
+        uses: Azure/k8s-deploy@v4.3
+        with:
+          images: micheljoaquim/kube-news:${{github.run_number}}
+          manifests:
+            k8s/deployment.yaml
